deploy/demo/frontpage-frontend/frontpage-frontend-env.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontpage-frontend
    labels:
        app: frontpage-frontend
spec:
    selector:
        matchLabels:
            app: frontpage-frontend
    template:
        spec:
            containers:
                - name: frontpage-frontend
