deploy/demo/frontpage-frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontpage-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: frontpage-poc.demo.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: frontpage-frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix
